--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -127,7 +127,7 @@ header .loc i {
 
 .restaurants-section {
   background: #f6f6f6;
-  margin-bottom: 60px;
+  padding-bottom: 60px;
 }
 .restaurants-section h4 {
   font-family: Roboto-Bold;
@@ -140,7 +140,7 @@ header .loc i {
 .restaurants-section #la-francaise img,
 .restaurants-section #delices-sens img {
   border-radius: 30px 30px 0 0;
-  padding: 20px 20px 0;
+  padding: 20px 10px 0;
   width: 100%;
   height: 251px;
 }
@@ -152,7 +152,7 @@ header .loc i {
 }
 .restaurants-section .card-txt {
   text-align: left;
-  margin: 0 20px;
+  margin: 0 10px;
   padding: 15px;
   line-height: 25px;
   background: white;
@@ -163,8 +163,29 @@ header .loc i {
   font-size: 1.125rem;
 }
 .restaurants-section .card-subtitle {
+  position: relative;
+  display: grid;
+  grid-template-columns: 70% 10% 20%;
+  grid-template-rows: 1fr;
+  grid-template-areas: " sub" "imp" "spa";
   font-family: Roboto-light;
   font-size: 1.063rem;
+}
+.restaurants-section .card-subtitle i {
+  top: -10px;
+  position: absolute;
+  padding-left: 50px;
+  font-size: 1.8rem;
+}
+.restaurants-section input[type=checkbox] {
+  display: none;
+}
+.restaurants-section label {
+  cursor: pointer;
+}
+.restaurants-section label :hover {
+  color: #9356dc;
+  font-weight: 900;
 }
 
 .choose-section {
@@ -221,7 +242,24 @@ footer {
   display: grid;
   justify-items: start;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 30% 70%;
   padding: 30px;
-  gap: 10px;
+}
+footer .partnership ul {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 20px;
+  padding-bottom: 50px;
+}
+footer .partnership ul li i {
+  padding-right: 10px;
 }/*# sourceMappingURL=index.css.map */
