--- a/assets/styles/layouts/_restaurants-section.scss
+++ b/assets/styles/layouts/_restaurants-section.scss
@@ -1,7 +1,7 @@
 .restaurants-section {
   background: $grey2;
+  padding-bottom: 60px;
 
-  margin-bottom: 60px;
   h4 {
     font-family: $font5;
     font-size: 1.5rem;
@@ -14,7 +14,7 @@
   #la-francaise img,
   #delices-sens img {
     border-radius: 30px 30px 0 0;
-    padding: 20px 20px 0;
+    padding: 20px 10px 0;
     width: 100%;
     height: 251px;
   }
@@ -26,7 +26,7 @@
   }
   .card-txt {
     text-align: left;
-    margin: 0 20px;
+    margin: 0 10px;
     padding: 15px;
     line-height: 25px;
     background: white;
@@ -37,7 +37,33 @@
     font-size: 1.125rem;
   }
   .card-subtitle {
+    position: relative;
+    display: grid;
+    grid-template-columns: 70% 10% 20%;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+      " sub"
+      "imp"
+      "spa";
     font-family: $font3;
     font-size: 1.063rem;
+  }
+  .card-subtitle i {
+    top: -10px;
+    position: absolute;
+    padding-left: 50px;
+    font-size: 1.8rem;
+  }
+
+  input[type="checkbox"] {
+    display: none;
+  }
+  label {
+    cursor: pointer;
+  }
+
+  label :hover {
+    color: $purple;
+    font-weight: 900;
   }
 }
