5émme sauvegarde ohmyfood

--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -33,13 +33,13 @@ $green2: #008766;
 $blue1: #89c8fa;
 $blue2: #003a68;
 $purple: #9356dc;
-$gradient: linear-gradient(
+$gradient1: linear-gradient(
     0deg,
     rgba(255, 255, 255, 0.15),
     rgba(255, 255, 255, 0.15)
   ),
   linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
-
+$gradient2: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 @mixin allCenter {
   display: flex;
   justify-content: center;
