--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -124,6 +124,9 @@ header .loc i {
   -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
+.search-section button:hover {
+  background: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
+}
 
 .restaurants-section {
   background: #f6f6f6;
