--- a/assets/styles/layouts/_search-section.scss
+++ b/assets/styles/layouts/_search-section.scss
@@ -1,29 +1,30 @@
- .search-section{
-    background: $grey2;
-  
-padding: 40px;
- 
- h2 {
-padding-bottom: 15px;
+.search-section {
+  background: $grey2;
+
+  padding: 40px;
+
+  h2 {
+    padding-bottom: 15px;
     font-family: $font5;
-      font-size: 1.5rem;
-}
-p{
+    font-size: 1.5rem;
+  }
+  p {
     font-family: $font3;
     font-size: 1.1rem;
-    padding-bottom: 10px ;
-}
-button{
+    padding-bottom: 10px;
+  }
+  button {
+    background: $gradient1;
+    font-family: $font4;
+    color: white;
+    width: 218px;
+    height: 50px;
+    border-radius: 25px;
+    margin: 20px 0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  }
 
-background: $gradient;
-font-family: $font4;
-color:white ;
-width:218px ;
-height: 50px;
-border-radius: 25px;
-margin: 20px 0;
-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-
-
-}
+  button:hover {
+    background: $gradient2;
+  }
 }
