--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -32,14 +32,12 @@ $font5: Roboto-Bold;
 
 //  ========COULEURS==========
 $black: #101010;
+$white: #ffffff;
 $grey1: #ebebea;
 $grey2: #f6f6f6;
 $grey3: #343435;
-$pink: #fcc0ce;
 $green1: #99e2d0;
 $green2: #008766;
-$blue1: #89c8fa;
-$blue2: #003a68;
 $purple: #9356dc;
 
 $gradient1: linear-gradient(
