--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,6 +4,7 @@
 @import "./applets/placeholders";
 @import "./applets/header";
 @import "./layouts/search-section";
-@import "./layouts/restaurants-section";
 @import "./layouts/choose-section";
+@import "./layouts/restaurants-section";
+@import "./layouts/main-container";
 @import "./applets/footer";
