--- a/scss/index.css
+++ b/scss/index.css
@@ -66,7 +66,7 @@ button:hover {
   background: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 }
 
-.choose-section .choose-section__restos, .choose-section a, .restaurants-section .card-content__encart, header .header__loc {
+.main-container .menus-container__name, .restaurants-section .card-content__encart, .choose-section .choose-section__restos, .choose-section a, header .header__pages, header .header__loc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,6 +109,12 @@ header .header__loc {
 header .header__loc i {
   padding-right: 10px;
 }
+header .header__pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 150px;
+}
 
 .search-section {
   background: #f6f6f6;
@@ -123,69 +129,6 @@ header .header__loc i {
   font-family: Roboto-light;
   font-size: 1.1rem;
   padding-bottom: 10px;
-}
-
-.restaurants-section {
-  background: #f6f6f6;
-  padding-bottom: 60px;
-}
-.restaurants-section h3 {
-  font-family: Roboto-Bold;
-  font-size: 1.5rem;
-  text-align: left;
-  padding: 30px 20px;
-}
-.restaurants-section .restaurants-section__cards-container img {
-  border-radius: 30px 30px 0 0;
-  padding: 20px 10px 0;
-  width: 100%;
-  height: 251px;
-}
-.restaurants-section .card-content {
-  text-align: left;
-  margin: 0 10px;
-  padding: 10px;
-  line-height: 25px;
-  background: white;
-  border-radius: 0 0 20px 20px;
-}
-.restaurants-section .restaurants-section__cards-container {
-  position: relative;
-}
-.restaurants-section .card-content__encart {
-  background: #99e2d0;
-  position: absolute;
-  top: 3%;
-  right: 20px;
-  height: 29px;
-  width: 80px;
-  font-family: Roboto-Medium;
-  font-size: 0.875rem;
-}
-.restaurants-section .card-content__encart.card-content__encart p {
-  color: #008766;
-}
-.restaurants-section h4 {
-  font-family: Roboto-Bold;
-  font-size: 1.125rem;
-}
-.restaurants-section .card-content__title {
-  position: relative;
-  display: grid;
-  grid-template-columns: 90% 10% fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: "ttl vde" "vde lab" "stl vde";
-}
-.restaurants-section h4 {
-  grid-area: ttl;
-}
-.restaurants-section .fa-solid {
-  grid-area: lab;
-}
-.restaurants-section .subtitle {
-  font-family: Roboto-light;
-  font-size: 1.063rem;
-  grid-area: stl;
 }
 
 .choose-section {
@@ -252,6 +195,109 @@ header .header__loc i {
   background: #9356dc;
   color: white;
   border-radius: 100%;
+}
+
+.restaurants-section {
+  background: #f6f6f6;
+  padding-bottom: 60px;
+  position: relative;
+}
+.restaurants-section h3 {
+  font-family: Roboto-Bold;
+  font-size: 1.5rem;
+  text-align: left;
+  padding: 30px 20px;
+}
+.restaurants-section .restaurants-section__cards-container img {
+  border-radius: 30px 30px 0 0;
+  padding: 20px 10px 0;
+  width: 100%;
+  height: 251px;
+}
+.restaurants-section .card-content {
+  text-align: left;
+  margin: 0 10px;
+  padding: 10px;
+  line-height: 25px;
+  background: white;
+  border-radius: 0 0 20px 20px;
+}
+.restaurants-section .card-content__encart {
+  background: #99e2d0;
+  position: absolute;
+  top: 10%;
+  right: 3%;
+  height: 29px;
+  width: 80px;
+  font-family: Roboto-Medium;
+  font-size: 0.875rem;
+}
+.restaurants-section .card-content__encart.card-content__encart p {
+  color: #008766;
+}
+.restaurants-section h4 {
+  font-family: Roboto-Bold;
+  font-size: 1.125rem;
+}
+.restaurants-section .card-content__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.restaurants-section .card-content__title i {
+  position: absolute;
+}
+.restaurants-section .card-content__title p {
+  font-family: Roboto-light;
+  font-size: 1.063rem;
+}
+
+.main-container img {
+  width: 100%;
+  height: 275px;
+  position: relative;
+}
+.main-container .menus-container {
+  background: #ebebea;
+  border-radius: 40px 40px 0px 0px;
+}
+.main-container .main-container__img {
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  z-index: -1;
+}
+.main-container .menus-container__name {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.main-container .menus-container__name h1 {
+  font-family: Shrikhand;
+  font-weight: 200;
+  font-size: 1.75rem;
+}
+.main-container .menus-container__name i {
+  position: absolute;
+  font-size: 1rem;
+  top: 23%;
+  right: 5%;
+}
+.main-container .menus-container__title h2 {
+  font-family: Roboto-light;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+.main-container .menus-container__cards {
+  background: white;
+  height: 72px;
+  border-radius: 15px;
+  margin: 10px;
 }
 
 footer {
