--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -7,7 +7,7 @@ button {
   background: $gradient1;
   font-family: $font4;
   color: white;
-  width: 218px;
+  width: 70%;
   height: 50px;
   border-radius: 25px;
   margin: 20px 0;
