--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -13,12 +13,12 @@
   .main-container__img {
     width: 100%;
     position: absolute;
-    top: 50px;
+    top: 70px;
     z-index: -1;
   }
   .menus-container__name {
-    position: relative;
-    @extend %all-center;
+    padding: 25px 10px 0;
+    align-items: center;
     display: flex;
   }
 
@@ -26,22 +26,55 @@
     font-family: $font1;
     font-weight: 200;
     font-size: 1.75rem;
+    margin-right: 20px;
   }
   .menus-container__name i {
-    position: absolute;
-    font-size: 1rem;
-    top: 23%;
-    right: 5%;
+    padding-left: 10px;
+    font-size: 1.4rem;
   }
+  .menus-container__title {
+    flex-direction: column;
+    display: flex;
+    gap: 5px;
+  }
+
   .menus-container__title h2 {
+    padding: 25px 10px 10px;
+    position: relative;
+    text-align: left;
     font-family: $font3;
     font-size: 1rem;
     text-transform: uppercase;
   }
+
+  .menus-container__title h2 ::after {
+    content: "";
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    width: 100%;
+    height: 3px;
+    background: red;
+  }
+
   .menus-container__cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background: white;
     height: 72px;
     border-radius: 15px;
     margin: 10px;
+    gap: 5px;
+    box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  }
+  .menus-container__cards_title {
+    text-align: left;
+    padding: 0 10px;
+  }
+  .menus-container__cards_content {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
   }
 }
