--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -11,8 +11,10 @@ button {
   height: 50px;
   border-radius: 25px;
   margin: 20px 0;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-}
-button:hover {
-  background: $gradient2;
+  box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
+  transition: all 453ms linear;
+  &:hover {
+    background: $gradient2;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
+  }
 }
