--- a/scss/index.css
+++ b/scss/index.css
@@ -58,12 +58,15 @@ button {
   height: 50px;
   border-radius: 25px;
   margin: 20px 0;
-  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
+          box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
+  -webkit-transition: all 453ms linear;
+  transition: all 453ms linear;
 }
-
 button:hover {
   background: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
+          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
 }
 
 .restaurants-section .restaurants-section__cards-container__cards__encart, .choose-section .choose-section__restos, .choose-section a, header .header__pages, header .header__loc {
@@ -205,6 +208,14 @@ header .header__pages i {
   padding: 30px 20px;
 }
 .restaurants-section .restaurants-section__cards-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 35px;
   position: relative;
 }
 .restaurants-section .restaurants-section__cards-container img {
@@ -259,7 +270,12 @@ header .header__pages i {
       -ms-flex-align: start;
           align-items: flex-start;
 }
-.restaurants-section .restaurants-section__cards-container__cards__content__title i {
+.restaurants-section .restaurants-section__cards-container__cards__content__title p {
+  padding-left: 30px;
+  font-family: Roboto-light;
+  font-size: 1.063rem;
+}
+.restaurants-section .fa-regular {
   position: absolute;
   top: 25%;
   right: 0%;
@@ -268,11 +284,28 @@ header .header__pages i {
   -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
   position: absolute;
+  font-size: 1.5rem;
 }
-.restaurants-section .restaurants-section__cards-container__cards__content__title p {
-  padding-left: 30px;
-  font-family: Roboto-light;
-  font-size: 1.063rem;
+.restaurants-section .fa-solid {
+  position: absolute;
+  top: 25%;
+  right: 0%;
+  bottom: 0%;
+  left: 80%;
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  font-size: 1.5rem;
+  position: absolute;
+  opacity: 0;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+}
+.restaurants-section .fa-solid:hover {
+  opacity: 1;
 }
 
 .main-container img {
@@ -305,9 +338,38 @@ header .header__pages i {
   font-size: 1.75rem;
   margin-right: 20px;
 }
-.main-container .menus-container__name i {
-  padding-left: 10px;
-  font-size: 1.4rem;
+.main-container .fa-regular {
+  position: absolute;
+  top: 24%;
+  right: 0%;
+  bottom: 0%;
+  left: 80%;
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  position: absolute;
+  font-size: 1.5rem;
+}
+.main-container .fa-solid {
+  cursor: pointer;
+  position: absolute;
+  top: 24%;
+  right: 0%;
+  bottom: 0%;
+  left: 80%;
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  font-size: 1.5rem;
+  position: absolute;
+  opacity: 0;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-transition: all 0.6 s ease-in-out;
+  transition: all 0.6 s ease-in-out;
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+}
+.main-container .fa-solid:hover {
+  opacity: 1;
 }
 .main-container .menus-container__title {
   -webkit-box-orient: vertical;
@@ -336,25 +398,6 @@ header .header__pages i {
   height: 3px;
   background: red;
 }
-.main-container .menus-container__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: white;
-  height: 72px;
-  border-radius: 15px;
-  margin: 10px;
-  gap: 5px;
-  -webkit-box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-}
 .main-container .menus-container__cards_title {
   text-align: left;
   padding: 0 10px;
@@ -367,6 +410,40 @@ header .header__pages i {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0 10px;
+}
+.main-container .menus-container__cards {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: white;
+  height: 69px;
+  border-radius: 15px;
+  margin: 10px;
+  gap: 5px;
+  -webkit-box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+}
+.main-container .menus-container__cards_content__price__anim {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  left: 100%;
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  border-radius: 0px 15px 15px 0px;
+  opacity: 0.8;
+  background: #99e2d0;
+  width: 59px;
+  height: 69px;
 }
 
 footer {
