--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,5 @@
 @import "./applets/settings";
+@import "./applets/animations";
 @import "./applets/mixins";
 @import "../components/buttons";
 @import "./applets/placeholders";
