--- a/scss/index.css
+++ b/scss/index.css
@@ -45,6 +45,41 @@ img {
      object-fit: cover;
 }
 
+#entrees {
+  opacity: 0;
+  -webkit-animation: openfader 2s linear forwards;
+          animation: openfader 2s linear forwards;
+}
+
+#plats {
+  opacity: 0;
+  -webkit-animation: openfader 2s linear 1s forwards;
+          animation: openfader 2s linear 1s forwards;
+}
+
+#desserts {
+  opacity: 0;
+  -webkit-animation: openfader 2s linear 1.5s forwards;
+          animation: openfader 2s linear 1.5s forwards;
+}
+
+@-webkit-keyframes openfader {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes openfader {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 button {
   cursor: pointer;
   border: none;
@@ -300,8 +335,8 @@ header .header__pages i {
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out linear;
+  transition: all 0.4s ease-in-out linear;
   background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
 }
 .restaurants-section .fa-solid:hover {
