--- a/scss/index.css
+++ b/scss/index.css
@@ -47,23 +47,23 @@ img {
 
 #entrees {
   opacity: 0;
-  -webkit-animation: openfader 2s linear forwards;
-          animation: openfader 2s linear forwards;
+  -webkit-animation: menusfader 2s linear forwards;
+          animation: menusfader 2s linear forwards;
 }
 
 #plats {
   opacity: 0;
-  -webkit-animation: openfader 2s linear 1s forwards;
-          animation: openfader 2s linear 1s forwards;
+  -webkit-animation: menusfader 2s linear 1s forwards;
+          animation: menusfader 2s linear 1s forwards;
 }
 
 #desserts {
   opacity: 0;
-  -webkit-animation: openfader 2s linear 1.5s forwards;
-          animation: openfader 2s linear 1.5s forwards;
+  -webkit-animation: menusfader 2s linear 1.5s forwards;
+          animation: menusfader 2s linear 1.5s forwards;
 }
 
-@-webkit-keyframes openfader {
+@-webkit-keyframes menusfader {
   from {
     opacity: 0;
   }
@@ -72,7 +72,7 @@ img {
   }
 }
 
-@keyframes openfader {
+@keyframes menusfader {
   from {
     opacity: 0;
   }
@@ -83,9 +83,6 @@ img {
 button {
   cursor: pointer;
   border: none;
-}
-
-button {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
   font-family: Roboto-Medium;
   color: white;
@@ -104,7 +101,7 @@ button:hover {
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
 }
 
-.restaurants-section .restaurants-section__cards-container__cards__encart, .choose-section .choose-section__restos, .choose-section a, header .header__pages, header .header__loc {
+.restaurants-section .restaurants-section__cards-container__cards__encart, .choose-section a, header .header__pages, header .header__loc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -185,16 +182,22 @@ header .header__pages i {
   padding: 30px 20px;
 }
 .choose-section nav {
-  display: grid;
-  gap: 40px;
-}
-.choose-section .choose-section__restos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
+.choose-section .choose-section__restos {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   background: #f6f6f6;
   width: 90%;
@@ -206,14 +209,15 @@ header .header__pages i {
           box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   font-family: Roboto-Medium;
 }
-.choose-section .fa-solid {
-  padding-right: 50px;
-  font-weight: 900;
+.choose-section .choose-section__restos p {
+  margin-left: 50px;
 }
 .choose-section .fa-solid.fa-list-ul, .choose-section .fa-solid.fa-mobile-screen-button {
   color: #343435;
+  position: relative;
 }
 .choose-section .fa-solid.fa-store {
+  position: relative;
   color: #9356dc;
 }
 .choose-section .choose-section__restos__ellipse {
@@ -275,7 +279,7 @@ header .header__pages i {
   top: 10%;
   right: 0%;
   bottom: 0%;
-  left: 70%;
+  left: 40%;
   -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
   height: 29px;
@@ -333,16 +337,37 @@ header .header__pages i {
   position: absolute;
   opacity: 0;
   color: transparent;
-  background-clip: text;
   -webkit-background-clip: text;
-  -webkit-transition: all 0.4s ease-in-out linear;
-  transition: all 0.4s ease-in-out linear;
-  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+          background-clip: text;
+  -webkit-transition: all 1s ease-in-out linear;
+  transition: all 1s ease-in-out linear;
+  background-image: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 }
 .restaurants-section .fa-solid:hover {
   opacity: 1;
 }
 
+.main-container {
+  /* .menus-container__title h2 ::after {
+      content: "";
+      position: absolute;
+      top: 10%;
+      right: 10%;
+      width: 100%;
+      height: 3px;
+      background: red;
+    }
+  */
+  /*.menus-container__cards_content__price__anim {
+    @include absolute-el(0%, 0%, 0%, 100%, 0%, 0%);
+    border-radius: 0px 15px 15px 0px;
+    opacity: 0.8;
+    background: $green1;
+    width: 59px;
+    height: 69px;
+  }
+  */
+}
 .main-container img {
   width: 100%;
   height: 275px;
@@ -359,6 +384,7 @@ header .header__pages i {
   z-index: -1;
 }
 .main-container .menus-container__name {
+  position: relative;
   padding: 25px 10px 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -375,33 +401,30 @@ header .header__pages i {
 }
 .main-container .fa-regular {
   position: absolute;
-  top: 24%;
+  top: 50%;
   right: 0%;
   bottom: 0%;
   left: 80%;
   -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
-  position: absolute;
   font-size: 1.5rem;
 }
 .main-container .fa-solid {
-  cursor: pointer;
   position: absolute;
-  top: 24%;
+  top: 50%;
   right: 0%;
   bottom: 0%;
   left: 80%;
   -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
   font-size: 1.5rem;
-  position: absolute;
   opacity: 0;
   color: transparent;
-  background-clip: text;
   -webkit-background-clip: text;
-  -webkit-transition: all 0.6 s ease-in-out;
-  transition: all 0.6 s ease-in-out;
-  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+          background-clip: text;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  background-image: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 }
 .main-container .fa-solid:hover {
   opacity: 1;
@@ -418,32 +441,40 @@ header .header__pages i {
 }
 .main-container .menus-container__title h2 {
   padding: 25px 10px 10px;
-  position: relative;
   text-align: left;
   font-family: Roboto-light;
   font-size: 1rem;
   text-transform: uppercase;
 }
-.main-container .menus-container__title h2 ::after {
-  content: "";
-  position: absolute;
-  top: 10%;
-  right: 10%;
-  width: 100%;
-  height: 3px;
-  background: red;
+.main-container .menus-container__title__style {
+  border-top: 3px solid #99e2d0;
+  width: 10%;
+  padding-right: 10px;
 }
 .main-container .menus-container__cards_title {
   text-align: left;
   padding: 0 10px;
+  overflow: hidden;
+  width: 70%;
+  -webkit-transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
+}
+.main-container .menus-container__cards_title__anim {
+  white-space: nowrap;
+  -webkit-transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
+}
+.main-container .menus-container__cards:hover {
+  background: blue;
+}
+.main-container .menus-container__cards:hover .menus-container__cards_title__anim {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .main-container .menus-container__cards_content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   padding: 0 10px;
 }
 .main-container .menus-container__cards {
@@ -451,13 +482,12 @@ header .header__pages i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background: white;
   height: 69px;
   border-radius: 15px;
@@ -466,19 +496,14 @@ header .header__pages i {
   -webkit-box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
 }
-.main-container .menus-container__cards_content__price__anim {
-  position: absolute;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  left: 100%;
-  -webkit-transform: translate(0%, 0%);
-          transform: translate(0%, 0%);
-  border-radius: 0px 15px 15px 0px;
-  opacity: 0.8;
-  background: #99e2d0;
-  width: 59px;
+.main-container .menus-container__cards_content__price {
   height: 69px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 footer {
